# learning-haskell

./: 12.5-chapter-exercises.md  README.md
01-all-you-need-is-lambda/: README.md
02-hello-haskell/: 2.10-a-head-code.md  2.11-chapter-exercises.md  2.5-comprehension-check.md  2.6-parentheses-and-association.md  2.7-heal-the-sick.md
02-hello-haskell/src/: chapter.hs  chapter2.hs  practise.hs
03-strings/: 3.11-chapter-exercises.md  3.4-scope.md  3.5-syntax-errors.md
03-strings/src/: chapter3.hs  reverse.hs
04-basic-datatypes/: 4.4-mood-swings.md  4.6-find-the-mistakes.md  4.9-chapter-exercises.md
04-basic-datatypes/src/: chapter4.hs  mood.hs
05-types/: 5.3-type-matching.md  5.4-type-arguments.md  5.5-parametricity.md  5.6-apply-yourself.md  5.8-chapter-excercises.md
05-types/src/: arith3broken.hs  defineFunc.hs  sing.hs  typekwondo.hs
06-typeclasses/: 6.14-chapter-exercises.md  6.6-eq-instances.md  6.6-tuple-experiment.md  6.8-will-they-work.md
06-typeclasses/src/: eqinstances.hs  typecheck.hs  typekwondo.hs
07-more-functional-patterns/: 7.11-chapter-exercises.md  7.3-grab-bag.md  7.4-variety-pack.md  7.5-case-practise.md  7.6-artful-dodgy.md  7.7-guard-duty.md
07-more-functional-patterns/src/: artfuldodgy.hs  casepractise.hs  writecode.hs
08-recursion/: 8.2-intermission.md  8.6-chapter-exercises.md
08-recursion/src/: dividedby.hs  mccarthy91.hs  recursion.hs  wordnumber.hs
09-lists/: 9.10-filtering.md  9.11-zipping-exercises.md  9.12-chapter-exercises.md  9.5-enumfromto.md  9.6-the-fearful-symmetry.md  9.7-comprehend-thy-lists.md  9.7-square-cube.md  9.8-bottom-madness.md  9.9-more-bottoms.md
09-lists/src/: char.hs  cipher.hs  enumfromto.hs  filtering.hs  poemlines.hs  split.hs  squarecube.hs  standards.hs  words.hs  zipping.hs
10-folding-lists/: 10.10-chapter-exercises.md  10.5-understanding-folds.md  10.6-database-processing.md  10.9-scan-exercises.md
10-folding-lists/src/: dbprocess.hs  fibs.hs  rewrite.hs  warmup.hs
11-algebraic-datatypes/: 11.10-pity-the-bool.md  11.12-garden.md  11.13-programmers.md  11.14-the-quad.md  11.18-chapter-exercises.md  11.5-dog-types.md  11.6-vehicles.md  11.8-cardinality.md  11.8-for-example.md  11.9-logic-goats.md
11-algebraic-datatypes/src/: aspatterns.hs  binarytree.hs  garden.hs  huttonrazor.hs  langexerc.hs  logicgoats.hs  phone.hs  programmers.hs  vehicle.hs  vigenere.hs
12-signaling-adversity/src/: binarytree.hs  itunfold.hs  libeither.hs  libmaybe.hs  naturals.hs  stringproc.hs  validateword.hs
13-building-projects/: 13.14-chapter-exercises.md  13.7-check-your-understanding.md
13-building-projects/hangman/: hangman.cabal
13-building-projects/hangman/src/: Main.hs
13-building-projects/src/: cipher.hs  palindrome.hs  person.hs
14-testing/: 14.3-intermission.md  14.7-chapter-exercises.md
14-testing/addition/: Addition.hs  addition.cabal
14-testing/hangman/: hangman.cabal
14-testing/hangman/app/: Main.hs
14-testing/hangman/src/: Hangman.hs
14-testing/hangman/test/: tests.hs
14-testing/morse/: morse.cabal
14-testing/morse/src/: Main.hs  Morse.hs
14-testing/morse/test/: tests.hs
14-testing/src/: idempotence.hs  makegen.hs  proptest.hs  wordnumbertest.hs
15-monoid-semigroup/: 15.10-optional-monoid.md  15.12-maybe-another-monoid.md  15.15-chapter-exercises.md
15-monoid-semigroup/orphan-instance/: Listy.hi  Listy.hs  ListyInstances.hi  ListyInstances.hs
15-monoid-semigroup/src/: First.hs  Optional.hs  madness.hs  semmon.hs
16-functor/: 16.10-instances-of-func.md  16.11-possibly.md  16.17-chapter-exercises.md  16.4-be-kind.md  16.7-heavy-lifting.md  16.7-typecheck.md
16-functor/src/: Possibly.hs  Sum.hs  chptexc.hs  func.hs
17-applicative/: 17.5-lookups.md  17.8.md  17.9-chapter-excercises.md
17-applicative/src/: BadMonoid.hs  Constant.hs  Identity.hs  List.hs  Person.hs  Validation.hs  combinations.hs  instances.hs  lookups.hs
18-monad/: 18.7-chapter-exercises.md
18-monad/src/: EitherMonad.hs  bind.hs  examples.hs  functions.hs  instances.hs
19-applying-structure/: 19-general-remarks.md
20-foldable/: 20.5-library-functions.md
20-foldable/src/: chapter.hs  functions.hs
21-traversable/: 21-traversable.md  21.12-chapter-exercises.md
21-traversable/src/: chapter.hs
22-reader/: 22-reader.md  22.11-chapter-excercises.md  22.2-warming-up.md  22.5-ask.md  22.6-reading-comprehension.md  22.7-reader-monad.md
22-reader/src/: ReaderPractice.hs  WithReaderT.hs  ask.hs  follow.hs  monadfunc.hs  readingcomp.hs  warmingup.hs
23-state/: 23-state.md  23.5-roll-your-own.md
23-state/src/: Moi.hs  RandomExample.hs  RandomExample2.hs  chapter.hs  fizzbuzz.hs
24-parser-combination/: 24-parser-combination.md  24.11-chapter-exercises.md  24.3-parsing-practise.md  24.4-unit-of-success.md  24.6-try-try.md
24-parser-combination/src/: AltParsing.hs  BT.hs  DOTParser.hs  Fractions.hs  GraphViz.hs  IPAddress.hs  Ini.hs  LearnParsers.hs  Marshalling.hs  NumberOrString.hs  ParseLog.hs  PhoneNumber.hs  PosInt.hs  SemVer.hs  TryTry.hs
25-composing-types/: 25-composing-types.md  25.4-twinplicative.md  25.6-compose-instances.md
25-composing-types/src/: IdendityT.hs  bifunctor.hs  gotcha.hs
26-monad-transformers/: 26-monad-transformers.md
26-monad-transformers/hit-counter/: Main.hs  hit-counter.cabal
26-monad-transformers/morra/: morra.cabal
26-monad-transformers/morra/lib/: Morra.hs
26-monad-transformers/morra/src/: Main.hs
26-monad-transformers/src/: EitherT.hs  FixTheCode.hs  Hypo.hs  MaybeT.hs  Morra.hs  ReaderT.hs  StateT.hs  WrapItUp.hs  WriteTheCode.hs
27-nonstrictness/: 27-nonstrictness.md
28-basic-libraries/: 28-basic-libraries.md
28-basic-libraries/src/: DiffList.hs  SimpleQueue.hs  (+3 more)
29-io/: 29-io.md
30-when-things-go-wrong/: 30-when-things-go-wrong.md
31-final-project/client/: client.cabal  users.json
31-final-project/client/src/: Main.hs
31-final-project/fingerd/: LICENSE  README.md  finger.db  fingerd.cabal  user.json
31-final-project/fingerd/lib/: UserDB.hs
31-final-project/fingerd/src/: DBTool.hs  Debug.hs  Main.hs  UserDB.hs
(+9 files in other folders)
