name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Gaël Depreeuw
maintainer:          example@example.com
copyright:           2017 Gaël Depreeuw
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split
