name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Gaël Depreeuw
maintainer:          example@example.com
copyright:           2017 Gaël Depreeuw
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     data/dict.txt

library
  exposed-modules:     Hangman
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hangman
test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , hangman
                     , hspec
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010