name:                client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Mithror/client#readme
license:             BSD3
license-file:        LICENSE
author:              Gaël Depreeuw
maintainer:          gael.depreeuw@gmail.com
copyright:           Copyright (c) 2018 Gaël Depreeuw
category:            daemon
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable client
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     , text
                     , bytestring
                     , transformers
                     , optparse-applicative
